Fixed header and footer alignment and added svg home img

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -15,13 +15,15 @@
 // SITE HEADER ====================================
 
 .site-header {
+  display: flex;
+  align-items: baseline;
   margin: $spacer4 0 $spacer1;
   @include clearfix();
 }
 
 .site-logo {
 //  width: 3rem;
-  height: 3rem;
+  height: 5rem;
 }
 
 .site-nav {
@@ -79,7 +81,7 @@
   .site-logo {
     margin-left: $spacer0;
 //    width: 3.5rem;
-    height: 3.5rem;
+    height: 5rem;
   }
 
   .site-nav {
@@ -138,7 +140,13 @@
 }
 
 .site-links {
+  display: flex;
+  justify-content: flex-end;
   @include clearfix();
+}
+
+.site-copy {
+  margin-right: auto;
 }
 
 .site-contact li,
